Self/mydevorg/packaged/TimbaSurveys/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>AllowAnonymousRecipients__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowAnonymousRecipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowMultiFill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowMultiFill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CollectedResponses__c</fullName>
        <label>CollectedResponses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CollectingData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CollectingData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateLeads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expiration Date Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date when the survey cannot be filled anymore.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstCollection__c</fullName>
        <label>FirstCollection</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NotificationEmail__c</fullName>
        <label>NotificationEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NotifyResponses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyResponses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfPages__c</fullName>
        <label>NumberOfPages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfQuestions__c</fullName>
        <label>NumberOfQuestions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionsPerPage__c</fullName>
        <label>QuestionsPerPage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedCase</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedContract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedLead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedObjectId__c</fullName>
        <label>RelatedObjectId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedOpportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedSolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedSolution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequireLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RequireLeads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyEmailTemplatePlain__c</fullName>
        <label>SurveyEmailTemplatePlain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyEmailTemplate__c</fullName>
        <label>SurveyEmailTemplate</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyTheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyTheme</label>
        <referenceTo>SurveyTheme__c</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimesSent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TimesSent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>